--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -3,18 +3,13 @@
 		<title>Rush</title>
 		<meta charset="UTF-8">
 		<link rel="icon" type="image/png" href="favicon.png">
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="account.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
 	</head>
-	<body class="home">
-		<div class="home">
-			<h1><mark>BOOMERANG</mark></h1>
-			<input id="login" class="home" type="button" value="LOGIN">
-			<br />
-			<input id="register" class="home" type="button" value="REGISTER">
-			<h2>mysterious messaging</h2>
+	<body>
+		<div>
+			account services
 		</div>
-		<script src="script/home.js"></script>
 	</body>
 </html>
