--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -8,8 +8,23 @@
 		<script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
 	</head>
 	<body>
-		<div>
-			account services
+		<div class="envelope">
+			<div class="user">
+				<input id="username" class="field" type="text" placeholder="username">
+				<br />
+				<input id="password" class="field" type="password" placeholder="password">
+			</div>
+			<div class="info">
+				<h2>
+					LOGIN
+				</h2>
+				<p>
+					Enter your <b>BOOMERANG</b> user name &amp; password to continue.
+				</p>
+			</div>
+			<hr>
+			<input id="clearall" type="button" value="CLEAR">
+			<input id="signin" type="button" value="SIGN IN">
 		</div>
 	</body>
 </html>
