--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>Rush</title>
@@ -23,8 +24,9 @@
 				</p>
 			</div>
 			<hr>
-			<input id="clearall" type="button" value="CLEAR">
+			<input id="clearall" type="button" value="RESET">
 			<input id="signin" type="button" value="SIGN IN">
 		</div>
+		<script src="script/user.js"></script>
 	</body>
 </html>
