account activity for UI

--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -11,21 +11,22 @@
 	<body>
 		<div class="envelope">
 			<div class="user">
-				<input id="username" class="field" type="text" placeholder="username">
+				<input id="username" class="field" type="text" placeholder="enter username">
 				<br />
-				<input id="password" class="field" type="password" placeholder="password">
+				<input id="password1" class="field" type="password" placeholder="choose password">
+				<input id="password2" class="field" type="password" placeholder="re-enter password">
 			</div>
 			<div class="info">
 				<h2>
 					LOGIN
 				</h2>
 				<p id ="intro">
-					Enter your <b>BOOMERANG</b> user name &amp; password to continue.
+					Choose your <b>BOOMERANG</b> user name &amp; password to continue. User names are unique. Passwords are case-sensitive.
 				</p>
 			</div>
 			<hr>
 			<input id="clearall" type="button" value="RESET">
-			<input id="signin" type="button" value="SIGN IN">
+			<input id="register" type="button" value="REGISTER">
 		</div>
 		<script src="script/user.js"></script>
 	</body>
