--- a/src/main/webapp/boomerang.html
+++ b/src/main/webapp/boomerang.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Rush</title>
+		<title>Boomerang</title>
 		<meta charset="UTF-8">
 		<link rel="icon" type="image/png" href="favicon.png">
-		<link rel="stylesheet" href="account.css">
+		<link rel="stylesheet" href="messenger.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
 	</head>
 	<body>
-		<p>messages</p>
+		<h1>boomerang</h1>
+		<div id="sidebar" class="connection">
+		  <div id="searchDiv" class="finder">
+			<label>@<input id="searchField" type="search" class="finder" placeholder="add contact"></label>
+			<input id="searchButton" type="button" class="finder" value="add">
+			<br />
+		  </div>
+		</div>
 		<script src="script/main.js"></script>
 	</body>
 </html>
