App static content and dataref

--- a/src/main/webapp/boomerang.html
+++ b/src/main/webapp/boomerang.html
@@ -10,12 +10,8 @@
 	</head>
 	<body>
 		<h1>boomerang</h1>
-		<div id="sidebar" class="connection">
-		  <div id="searchDiv" class="finder">
-			<label>@<input id="searchField" type="search" class="finder" placeholder="add contact"></label>
-			<input id="searchButton" type="button" class="finder" value="add">
-			<br />
-		  </div>
+		<div id="sidebar">
+		  <input id="appFacebook" class="app" type="image" src="icons/fb.png" alt="Facebook">
 		</div>
 		<script src="script/main.js"></script>
 	</body>
