--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Rush</title>
+		<title>Boomerang</title>
 		<meta charset="UTF-8">
 		<link rel="icon" type="image/png" href="favicon.png">
 		<link rel="stylesheet" href="style.css">
@@ -17,6 +17,7 @@
 		  firebase.initializeApp(config);
 		</script>
 		<script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
+		<script src="script/home.js"></script>
 	</head>
 	<body class="home">
 		<div class="home">
@@ -26,6 +27,5 @@
 			<input id="register" class="home" type="button" value="REGISTER">
 			<h2>mysterious messaging</h2>
 		</div>
-		<script src="script/home.js"></script>
 	</body>
 </html>
