--- a/src/main/webapp/boomerang/index.html
+++ b/src/main/webapp/boomerang/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<title>Boomerang</title>
 		<meta charset="UTF-8">
-		<link rel="icon" type="image/png" href="favicon.png">
-		<link rel="stylesheet" href="messenger.css">
+		<link rel="icon" type="image/png" href="./../favicon.png">
+		<link rel="stylesheet" href="style.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<script src="https://www.gstatic.com/firebasejs/3.6.5/firebase.js"></script>
 		<script>
@@ -18,6 +18,7 @@
 		  firebase.initializeApp(config);
 		</script>
 		<script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
+		<script src="main.js"></script>
 	</head>
 	<body>
 		<h1>boomerang</h1>
@@ -25,6 +26,5 @@
 		<input id="sysExit" class="app" type="image" src="icons/exit.png" alt="Facebook">
 		  <input id="appFacebook" class="app" type="image" src="icons/fb.png" alt="Facebook">
 		</div>
-		<script src="script/main.js"></script>
 	</body>
 </html>
