open iframe apps

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,7 +3,7 @@
 		<title>Boomerang</title>
 		<meta charset="UTF-8">
 		<link rel="icon" type="image/png" href="favicon.png">
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="css/home.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<script src="https://www.gstatic.com/firebasejs/3.6.5/firebase.js"></script>
 		<script>
@@ -22,10 +22,8 @@
 	<body class="home">
 		<div class="home">
 			<h1><mark>BOOMERANG</mark></h1>
-			<input id="login" class="home" type="button" value="LOGIN">
-			<br />
-			<input id="register" class="home" type="button" value="REGISTER">
-			<h2>mysterious messaging</h2>
+			<input id="login" class="home" type="button" value="ENTER">
+			<h2>its a browser in a browser, seriously.</h2>
 		</div>
 	</body>
 </html>
