--- a/src/main/webapp/boomerang.html
+++ b/src/main/webapp/boomerang.html
@@ -6,18 +6,9 @@
 		<link rel="icon" type="image/png" href="favicon.png">
 		<link rel="stylesheet" href="css/boomerang.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<script src="https://www.gstatic.com/firebasejs/3.6.5/firebase.js"></script>
-		<script>
-		  var config = {
-			apiKey: "AIzaSyDzS133LwNBIszgiDKJ1KTH5TXAoltodwA",
-			authDomain: "boomerang-686.firebaseapp.com",
-			databaseURL: "https://boomerang-686.firebaseio.com",
-			storageBucket: "boomerang-686.appspot.com",
-			messagingSenderId: "1051306301228"
-		  };
-		  firebase.initializeApp(config);
-		</script>
 		<script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
+		<script src="https://www.gstatic.com/firebasejs/3.6.5/firebase.js"></script>
+		<script src="script/init.js"></script>
 		<script src="script/main.js"></script>
 	</head>
 	<body>
