server side firebase 02

--- a/src/main/webapp/boomerang.html
+++ b/src/main/webapp/boomerang.html
@@ -15,7 +15,8 @@
 		<h1>boomerang</h1>
 		<div id="sidebar">
 		  <input id="sysExit" class="app" type="image" src="icons/exit.png" alt="Facebook">
-		  <input id="appFacebook" class="app" type="image" src="icons/fb.png" alt="Facebook">
+		  <input id="appFacebook" class="app" type="image" src="icons/bing.png" alt="Bing">
+		  <input id="appWikipedia" class="app" type="image" src="icons/bing.png" alt="Wikipedia">
 		</div>
 	</body>
 </html>
