--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,26 +5,14 @@
 		<link rel="icon" type="image/png" href="favicon.png">
 		<link rel="stylesheet" href="css/home.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<script src="https://www.gstatic.com/firebasejs/3.6.5/firebase.js"></script>
-		<!-- <script>
-		  var config = {
-			apiKey: "AIzaSyDzS133LwNBIszgiDKJ1KTH5TXAoltodwA",
-			authDomain: "boomerang-686.firebaseapp.com",
-			databaseURL: "https://boomerang-686.firebaseio.com",
-			storageBucket: "boomerang-686.appspot.com",
-			messagingSenderId: "1051306301228"
-		  };
-		  firebase.initializeApp(config);
-		</script> -->
 		<script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
 		<script src="script/home.js"></script>
 	</head>
 	<body class="home">
 		<div class="home">
 			<h1><mark>BOOMERANG</mark></h1>
-			<input id="login" class="home" type="button" value="LOGIN with Google">
-			<input id="guest" class="home" type="button" value="ENTER as guest">
-			<h2>its a browser in a browser, seriously.</h2>
+			<input id="enter" class="home" type="button" value="ENTER">
+			<h2>Stock Market Machine Learning</h2>
 		</div>
 	</body>
 </html>
